--- a/docs/01-概念梳理.md
+++ b/docs/01-概念梳理.md
@@ -44,6 +44,8 @@
 
   + **AIO/NIO2**（java1.7新增，实现也位于java.nio包）：异步非阻塞IO；
 
+    依赖Linux AIO Linux, AIO底层也是epoll, 只不过是通过**异步回调**将就绪列表返回给Java线程的，而NIO是**阻塞**的方式。
+
   > 这4种IO工作原理简图：
   >
   > 《Java高并发核心编程. 卷1》有画了这四种IO的工作原理简图，但是感觉画的不是很好，网上找了下别人画的图感觉还行，参考此链接：[四张图，读懂 BIO、NIO、AIO、多路复用 IO 的区别](https://mingongge.blog.csdn.net/article/details/119860637?spm=1001.2101.3001.6650.1&utm_medium=distribute.pc_relevant.none-task-blog-2~default~CTRLIST~default-1-119860637-blog-109811000.pc_relevant_multi_platform_whitelistv1_exp2&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2~default~CTRLIST~default-1-119860637-blog-109811000.pc_relevant_multi_platform_whitelistv1_exp2&utm_relevant_index=2)
